--- a/The_Feynman_Technique/index.html
+++ b/The_Feynman_Technique/index.html
@@ -13,7 +13,7 @@
                 padding: 0;
             }
         </style>
-        <embed src="https://drive.google.com/file/d/1wBsrvdtzePO7oNsIRy31hYXDQHZADxjU/preview" style="position: absolute; top:0px; right:0px; bottom:0px; left:0px; " height="100%" width="100%">-->
+        <embed src="./docs/The Feynman Technique.pdf" style="position: absolute; top:0px; right:0px; bottom:0px; left:0px; " height="100%" width="100%">-->
         <!--<iframe src="https://drive.google.com/file/d/1wBsrvdtzePO7oNsIRy31hYXDQHZADxjU/preview" style="position: absolute; top:0px; right:0px; bottom:0px; left:0px; " height="100%" width="100%" frameBorder="0"></iframe>-->
     </body>
 </html>
