--- a/The_Feynman_Technique/index.html
+++ b/The_Feynman_Technique/index.html
@@ -5,6 +5,7 @@
     -->
     <head>
         <title>The Feynman Technique</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     </head>
     <body>
         <style>
